full model transformer, no data i/o yet

--- a/stanford-contextual-word-representation-transformer.ipynb
+++ b/stanford-contextual-word-representation-transformer.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# cons of \"one representation\" of words"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Up until now, we’ve basically had one representation of words: The word vectors that we learned about at the beginning\n",
     "- Word2vec, GloVe, fastText\n",
@@ -26,42 +30,54 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "However, these problems have been solved by the process of building a language model that predicts next word; **by doing so you already generate a context-specific representation of words**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Tag LM (pre ELMO) for Name Entity Recognition (NER)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/context_1.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Note that \"word embedding model\" is the word embedding from w2v/glove/fasttext"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/context_2.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Token embedding is from w2v/glove/fasttext\n",
     "\n",
@@ -72,14 +88,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# ELMO"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Peters et al. (2018): ELMo: Embeddings from Language\n",
     "Models\n",
@@ -106,14 +126,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## weighting of layers for different tasks"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The two biLSTM NLM layers have differentiated uses/meanings\n",
     "- Lower layer is better for lower-level syntax, etc.\n",
@@ -189,7 +213,9 @@
     "- The input word vectors are the queries, keys and values\n",
     "- In other words: the word vectors themselves select each other\n",
     "- Word vector stack = Q = K = V\n",
-    "- We’ll see in the decoder why we separate them in the definition"
+    "- We’ll see in the decoder why we separate them in the definition\n",
+    "\n",
+    "In a self-attention layer all of the keys, values and queries come from the same place, in this case, the output of the previous layer in the encode"
    ]
   },
   {
@@ -272,7 +298,7 @@
     "    scores = torch.matmul(query, key.transpose(-2, -1)) / math.sqrt(d_k)\n",
     "    # (bs,h, n, d_k) @ (bs,h, m, d_k) = (bs,h,n,m) aka QKt\n",
     "    if mask is not None:\n",
-    "        scores = scores.masked_fill(mask == 0, -1e9) # fill mask for softmax\n",
+    "        scores = scores.masked_fill(mask == 0, -1e9) # fill mask before softmax\n",
     "    p_attn = F.softmax(scores, dim = -1)\n",
     "    if dropout is not None:\n",
     "        p_attn = dropout(p_attn)\n",
@@ -376,7 +402,8 @@
     "        n can be sent_length (number of words for each batch)\n",
     "        \"\"\"\n",
     "\n",
-    "        return x + self.dropout(sublayer(self.norm(x))) #residual"
+    "        return x + self.dropout(sublayer(self.norm(x))) \n",
+    "        # apply residual to multiheaded attention or fully connected NNs based on 'sublayer'"
    ]
   },
   {
@@ -389,8 +416,8 @@
     "    \"Encoder is made up of self-attn and feed forward (defined below)\"\n",
     "    def __init__(self, size, self_attn, feed_forward, dropout):\n",
     "        super(EncoderLayer, self).__init__()\n",
-    "        self.self_attn = self_attn # which is MultiHeadAttention as defined above\n",
-    "        self.feed_forward = feed_forward # probably just nn.Linear\n",
+    "        self.self_attn = self_attn # which is MultiHeadedAttention as defined above\n",
+    "        self.feed_forward = feed_forward # two linear transformations with a ReLU activation in between\n",
     "        self.sublayer = clones(SublayerConnection(size, dropout), 2)\n",
     "        self.size = size\n",
     "\n",
@@ -401,7 +428,41 @@
     "        n can be sent_length (number of words for each batch)\n",
     "        \"\"\"\n",
     "        x = self.sublayer[0](x, lambda x: self.self_attn(x, x, x, mask))\n",
+    "        # In a self-attention layer all of the keys, values and queries come from the same place, \n",
+    "        # in this case, the output of the previous layer in the encode\n",
     "        return self.sublayer[1](x, self.feed_forward) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fully connected feed-forward network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each of the layers in our encoder and decoder contains a fully connected feed-forward network, which is applied to each position separately and identically. This consists of two linear transformations with a ReLU activation in between."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PositionwiseFeedForward(nn.Module):\n",
+    "    \"Implements FFN equation.\"\n",
+    "    def __init__(self, d_model=512, d_ff=2048, dropout=0.1):\n",
+    "        super(PositionwiseFeedForward, self).__init__()\n",
+    "        self.w_1 = nn.Linear(d_model, d_ff)\n",
+    "        self.w_2 = nn.Linear(d_ff, d_model)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.w_2(self.dropout(F.relu(self.w_1(x))))"
    ]
   },
   {
@@ -458,7 +519,7 @@
     "- multi-block with multi-head attention\n",
     "    - \\+ With block stacking on top of each other, each block will try to capture information in a chain: 1st block can capture 1st info of a chain, 2nd block can capture 2nd info of a chain => similar to RNN\n",
     "    - \\+ CAN feed the entire batch of sequences => parallelize well using GPUs\n",
-    "    - \\- disregard the position of words in a sentence: 2 of the same words in different position might be treated the same way, or dont know where you are at in the sentence\n",
+    "    - \\- disregard the position of words in a sentence: 2 of the same words in different position might be treated the same way. Also, without position, you dont know where you are at in the sentence\n",
     "        - Solution: **positional encoding** so same words at different locations have different overall representations:"
    ]
   },
@@ -474,6 +535,77 @@
    "metadata": {},
    "source": [
     "![](images/transformer_6.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Token embeddings and tie-weight (weight sharing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Similarly to other sequence transduction models, we use learned embeddings to convert the **input tokens** (of encoder) and **output tokens** (of decoder) to **vectors of dimension  d_model**\n",
+    "- We also use the usual learned linear transformation and softmax function to convert the decoder output to predicted next-token probabilities. \n",
+    "- In our model, **we share the same weight matrix between the two embedding layers and the pre-softmax linear transformation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# see code in Full Model section\n",
+    "model.src_embed[0].lut.weight = model.tgt_embeddings[0].lut.weight\n",
+    "model.generator.lut.weight = model.tgt_embed[0].lut.weight"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Positional encoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- in order for the model to make use of the order of the sequence, we must inject some information about the relative or absolute position of the tokens in the sequence\n",
+    "- The positional encodings have the same dimension d_model as the embeddings, so that the two can be summed\n",
+    "- See more at http://nlp.seas.harvard.edu/2018/04/03/attention.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PositionalEncoding(nn.Module):\n",
+    "    \"Implement the PE function.\"\n",
+    "    def __init__(self, d_model, dropout, max_len=5000):\n",
+    "        super(PositionalEncoding, self).__init__()\n",
+    "        self.dropout = nn.Dropout(p=dropout)\n",
+    "        \n",
+    "        # Compute the positional encodings once in log space.\n",
+    "        pe = torch.zeros(max_len, d_model)\n",
+    "        position = torch.arange(0, max_len).unsqueeze(1)\n",
+    "        div_term = torch.exp(torch.arange(0, d_model, 2) *\n",
+    "                             -(math.log(10000.0) / d_model))\n",
+    "        pe[:, 0::2] = torch.sin(position * div_term)\n",
+    "        pe[:, 1::2] = torch.cos(position * div_term)\n",
+    "        pe = pe.unsqueeze(0)\n",
+    "        self.register_buffer('pe', pe)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = x + Variable(self.pe[:, :x.size(1)], \n",
+    "                         requires_grad=False)\n",
+    "        return self.dropout(x)"
    ]
   },
   {
@@ -509,6 +641,218 @@
    "metadata": {},
    "source": [
     "![](images/transformer_11.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def subsequent_mask(size):\n",
+    "    \"Mask out subsequent positions.\"\n",
+    "    attn_shape = (1, size, size)\n",
+    "    subsequent_mask = np.triu(np.ones(attn_shape), k=1).astype('uint8')\n",
+    "    print(subsequent_mask)\n",
+    "    return torch.from_numpy(subsequent_mask) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0 1 1 1 1]\n",
+      "  [0 0 1 1 1]\n",
+      "  [0 0 0 1 1]\n",
+      "  [0 0 0 0 1]\n",
+      "  [0 0 0 0 0]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = subsequent_mask(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[ True, False, False, False, False],\n",
+       "          [ True,  True, False, False, False],\n",
+       "          [ True,  True,  True, False, False],\n",
+       "          [ True,  True,  True,  True, False],\n",
+       "          [ True,  True,  True,  True,  True]]]),\n",
+       " torch.Size([1, 5, 5]))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp,temp.shape # mask is at False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DecoderLayer(nn.Module):\n",
+    "    \"Decoder is made of self-attn, src-attn, and feed forward (defined below)\"\n",
+    "    def __init__(self, size, self_attn, src_attn, feed_forward, dropout):\n",
+    "        super(DecoderLayer, self).__init__()\n",
+    "        self.size = size\n",
+    "        self.self_attn = self_attn\n",
+    "        self.src_attn = src_attn\n",
+    "        self.feed_forward = feed_forward\n",
+    "        self.sublayer = clones(SublayerConnection(size, dropout), 3)\n",
+    " \n",
+    "    def forward(self, x, memory, src_mask, tgt_mask):\n",
+    "        \"Follow Figure 1 (right) for connections.\"\n",
+    "        m = memory\n",
+    "        x = self.sublayer[0](x, lambda x: self.self_attn(x, x, x, tgt_mask))\n",
+    "        x = self.sublayer[1](x, lambda x: self.src_attn(x, m, m, src_mask)) \n",
+    "        # key and value (m) from encoder\n",
+    "        return self.sublayer[2](x, self.feed_forward)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Full model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a stack of N=6 identical layers\n",
+    "class Encoder(nn.Module):\n",
+    "    \"Core encoder is a stack of N layers\"\n",
+    "    def __init__(self, layer, N):\n",
+    "        super(Encoder, self).__init__()\n",
+    "        self.layers = clones(layer, N)\n",
+    "        self.norm = LayerNorm(layer.size)\n",
+    "        \n",
+    "    def forward(self, x, mask):\n",
+    "        \"Pass the input (and mask) through each layer in turn.\"\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x, mask)\n",
+    "        return self.norm(x)\n",
+    "\n",
+    "# a stack of N=6 identical layers\n",
+    "class Decoder(nn.Module):\n",
+    "    \"Generic N layer decoder with masking.\"\n",
+    "    def __init__(self, layer, N):\n",
+    "        super(Decoder, self).__init__()\n",
+    "        self.layers = clones(layer, N)\n",
+    "        self.norm = LayerNorm(layer.size)\n",
+    "        \n",
+    "    def forward(self, x, memory, src_mask, tgt_mask):\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x, memory, src_mask, tgt_mask)\n",
+    "        return self.norm(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EncoderDecoder(nn.Module):\n",
+    "    \"\"\"\n",
+    "    A standard Encoder-Decoder architecture. Base for this and many \n",
+    "    other models.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, encoder, decoder, src_embed, tgt_embed, generator):\n",
+    "        super(EncoderDecoder, self).__init__()\n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
+    "        self.src_embed = src_embed\n",
+    "        self.tgt_embed = tgt_embed\n",
+    "        self.generator = generator # standard linear + softmax generation step, aka blue arrow step \n",
+    "        \n",
+    "    def forward(self, src, tgt, src_mask, tgt_mask):\n",
+    "        \"Take in and process masked src and target sequences.\"\n",
+    "        return self.decode(self.encode(src, src_mask), src_mask,\n",
+    "                            tgt, tgt_mask)\n",
+    "    \n",
+    "    def encode(self, src, src_mask):\n",
+    "        return self.encoder(self.src_embed(src), src_mask)\n",
+    "    \n",
+    "    def decode(self, memory, src_mask, tgt, tgt_mask):\n",
+    "        return self.decoder(self.tgt_embed(tgt), memory, src_mask, tgt_mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Generator(nn.Module):\n",
+    "    \"Define standard linear + softmax generation step.\"\n",
+    "    def __init__(self, d_model, vocab):\n",
+    "        super(Generator, self).__init__()\n",
+    "        self.proj = nn.Linear(d_model, vocab)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return F.log_softmax(self.proj(x), dim=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_model(src_vocab, tgt_vocab, N=6, \n",
+    "               d_model=512, d_ff=2048, h=8, dropout=0.1):\n",
+    "    \"Helper: Construct a model from hyperparameters.\"\n",
+    "    c = copy.deepcopy\n",
+    "    attn = MultiHeadedAttention(h, d_model)\n",
+    "    ff = PositionwiseFeedForward(d_model, d_ff, dropout)\n",
+    "    position = PositionalEncoding(d_model, dropout)\n",
+    "    model = EncoderDecoder(\n",
+    "        Encoder(EncoderLayer(d_model, c(attn), c(ff), dropout), N),\n",
+    "        Decoder(DecoderLayer(d_model, c(attn), c(attn), \n",
+    "                             c(ff), dropout), N),\n",
+    "        nn.Sequential(Embeddings(d_model, src_vocab), c(position)),\n",
+    "        nn.Sequential(Embeddings(d_model, tgt_vocab), c(position)),\n",
+    "        Generator(d_model, tgt_vocab))\n",
+    "    \n",
+    "    # This was important from their code. \n",
+    "    # Initialize parameters with Glorot / fan_avg.\n",
+    "    for p in model.parameters():\n",
+    "        if p.dim() > 1:\n",
+    "            nn.init.xavier_uniform(p)\n",
+    "    return model"
    ]
   },
   {
