more note on self-attention

--- a/stanford-contextual-word-representation-transformer.ipynb
+++ b/stanford-contextual-word-representation-transformer.ipynb
@@ -180,6 +180,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Self-attention"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![](images/transformer_2.png)"
    ]
   },
@@ -195,6 +202,43 @@
    "metadata": {},
    "source": [
     "![](images/transformer_12.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/selfattention_1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Review definition of Attention\n",
+    "\n",
+    "- On each step of the decoder, use **direct connection to the encoder** to **focus on particular part** of **source sentence**\n",
+    "- More formal: a content-based, memory retrieval mechanism\n",
+    "    - You have a vector in decoder to attend to all this content ( representations/hidden states) from your encoder to decide what information to absorb, based on how similar this content is to every position in the memory "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want to re-represent the word 'represent' in the above picture\n",
+    "- this word is our 'query'\n",
+    "- query can just initially be word-embedding\n",
+    "- **we attend (do dot product) this with all its neighbors** (let's,this,sentence). Its neighbors are matrix K, and this step is known as q@K or Q@KT (for the whole matrix Q). This produce attention score\n",
+    "- (scale) and then softmax to have attention distribution (attention probability). \n",
+    "- then multiply this distribution to the value (V) which is just the neighborhood itself and add them, aka produce a weighted combination of your entire neighborhood\n",
+    "- then you can add a feed-forward network to compute new features\n",
+    "\n",
+    "=> **Definition of Self-attention**: you re-express yourself in terms of a weight combination of your entire neighborhood, based on the similarity b/t you and your neighbors\n",
+    "\n",
+    "**important note**: attention (and self-attention) in general is **permutation invariant: switching orders of words and the results are still the same after applying attention**\n",
+    "\n",
+    "(so to maintain order we need positional encoding. See more below)"
    ]
   },
   {
@@ -230,6 +274,29 @@
    "metadata": {},
    "source": [
     "![](images/transformer_4.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Why?**\n",
+    "\n",
+    "By mapping Q,K,V to a lower dimensional space (for each head) using linear tfm, **each head can represent different feature space (syntax, nouns ...) so the attention result can be a MIXING PROPORTIONS of different type of information for each head**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the e.g below, we have 3 heads, and imagine green arrow captures \"who\" feature, red captures \"did what\" feature and purpil captures \"to whom\". In a sense, **this technique simulate CNN kernel with multiple filters that can filter out different information with each of its filter**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/selfattention_3.png)"
    ]
   },
   {
@@ -279,6 +346,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Why we need to do a linear tfm for Q,K,V (e.g. Q@Wi) before doing attention?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/selfattention_2.png)\n",
+    "\n",
+    "(at the lower left corner)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Linear tfm used here can be thought as to generate features: you project these vectors into a space using learnable parameters, so that when dot product is applied, IT CAN BE A GOOD PROXY FOR SIMILARITY"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -296,7 +386,7 @@
     "\n",
     "    d_k = query.size(-1)\n",
     "    scores = torch.matmul(query, key.transpose(-2, -1)) / math.sqrt(d_k)\n",
-    "    # (bs,h, n, d_k) @ (bs,h, m, d_k) = (bs,h,n,m) aka QKt\n",
+    "    # (bs,h, n, d_k) @ (bs,h, m, d_k)^T = (bs,h,n,m) aka QKt\n",
     "    if mask is not None:\n",
     "        scores = scores.masked_fill(mask == 0, -1e9) # fill mask before softmax\n",
     "    p_attn = F.softmax(scores, dim = -1)\n",
