--- a/stanford-languagemodel-machinetranslation-attention.ipynb
+++ b/stanford-languagemodel-machinetranslation-attention.ipynb
@@ -370,7 +370,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On each step of the decoder, use **direct connection to the encoder** to **focus on particular part** of **source sentence**"
+    "- On each step of the decoder, use **direct connection to the encoder** to **focus on particular part** of **source sentence**\n",
+    "- More formal: a content-based, memory retrieval mechanism\n",
+    "    - You have a vector in decoder to attend to all this content ( representations/hidden states) from your encoder to decide what information to absorb, based on how similar this content is to every position in the memory "
    ]
   },
   {
