--- a/stanford_qa_cnn_archcomparison_qrnn.ipynb
+++ b/stanford_qa_cnn_archcomparison_qrnn.ipynb
@@ -73,9 +73,13 @@
     "    - have to go through the **entire sequence** (e.g. the entire sentence in classification task) **from one end to another** for a final vector (hidden vector h), and **normally capture too much of last words inside this vector** (assuming no LSTM or attention tweak)\n",
     "    - RNN always go through prefix context before getting to a subsequent short phrases, e.g. the country of my birth ..., **RNN cannot capture the phrase \"my birth\" independently without considering \"the country of\"**\n",
     "    \n",
+    "    => No explicit modeling of long and short range dependencies\n",
+    "    \n",
     "- CNN: can compute \"vectors\" for every possible \"word subsequence\" of a certain length\n",
     "    - e.g: for the example above: the country, country of, of my, my birth ...\n",
-    "    - Regardless of whether phrase is grammatical"
+    "    - Regardless of whether phrase is grammatical\n",
+    "    - Exploits local dependencies (short-range)\n",
+    "    - However, long-distance dependencies require many layers (similarly to CNN in computer vision, deeper is better at capture \"big picture\" information)"
    ]
   },
   {
@@ -238,18 +242,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Advices on using different architectures for NLP tasks"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](images/cnn_9.png)"
    ]
