small note, tbc

--- a/stanford-contextual-word-representation-transformer.ipynb
+++ b/stanford-contextual-word-representation-transformer.ipynb
@@ -493,7 +493,8 @@
     "        \"\"\"\n",
     "\n",
     "        return x + self.dropout(sublayer(self.norm(x))) \n",
-    "        # apply residual to multiheaded attention or fully connected NNs based on 'sublayer'"
+    "        # apply residual to multiheaded attention or fully connected NNs based on 'sublayer'\n",
+    "        # Note: Residuals carry positional information to higher layers, among other information"
    ]
   },
   {
