relative attention. Final note for transformer

--- a/stanford-contextual-word-representation-transformer.ipynb
+++ b/stanford-contextual-word-representation-transformer.ipynb
@@ -833,6 +833,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**One problem with using this Decoder for seq2seq task such as neural machine translation** is it will just be similar to LSTM/RNN (autoregressive model as you use observations from previous time steps as input to predict the value at the next time step)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Full model"
    ]
   },
