--- a/stanford-transformer-for-images-and-music.ipynb
+++ b/stanford-transformer-for-images-and-music.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# For images"
+    "# For images and music "
    ]
   },
   {
@@ -25,15 +25,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# For music"
+    "# Relative attention"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "A combination of\n",
+    "- self attention: weight average\n",
+    "- convolution (1D): different linear transformations by relative position\n",
+    "    - since you have a FIX filter moving around to CAPTURE RELATIVE DISTANCE, like 1 step away, 2 steps away ... TODO: why tf this relates to distance\n",
+    "    - help self-attention capture translational invariance (position of pattern doesn't matter since it can recognize that pattern anywhere)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/relativeattention_1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/relativeattention_2.png)"
+   ]
   }
  ],
  "metadata": {
