more on positional encoding

--- a/stanford-contextual-word-representation-transformer.ipynb
+++ b/stanford-contextual-word-representation-transformer.ipynb
@@ -39,45 +39,35 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Tag LM (pre ELMO) for Name Entity Recognition (NER)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](images/context_1.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Note that \"word embedding model\" is the word embedding from w2v/glove/fasttext"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](images/context_2.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Token embedding is from w2v/glove/fasttext\n",
     "\n",
@@ -88,18 +78,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# ELMO"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Peters et al. (2018): ELMo: Embeddings from Language\n",
     "Models\n",
@@ -126,18 +112,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## weighting of layers for different tasks"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "The two biLSTM NLM layers have differentiated uses/meanings\n",
     "- Lower layer is better for lower-level syntax, etc.\n",
@@ -148,21 +130,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "# Transformers"
+    "# Transformer"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "http://nlp.seas.harvard.edu/2018/04/03/attention.html"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We want parallelization but RNNs are inherently sequential\n",
     "- Despite GRUs and LSTMs, **RNNs still need attention mechanism to deal with long range dependencies** – path length between states grows with sequence otherwise\n",
@@ -171,49 +159,63 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/transformer_1.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Self-attention"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/transformer_2.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/transformer_3.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/transformer_12.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/selfattention_1.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Review definition of Attention\n",
     "\n",
@@ -224,7 +226,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We want to re-represent the word 'represent' in the above picture\n",
     "- this word is our 'query'\n",
@@ -250,10 +254,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "## Self-attention in the **encoder**\n",
-    "\n",
+    "## Self-attention in the **encoder**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
     "- The input word vectors are the queries, keys and values\n",
     "- In other words: the word vectors themselves select each other\n",
     "- Word vector stack = Q = K = V\n",
@@ -264,21 +277,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Multihead attention"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/transformer_4.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "**Why?**\n",
     "\n",
@@ -287,21 +306,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "For the e.g below, we have 3 heads, and imagine green arrow captures \"who\" feature, red captures \"did what\" feature and purpil captures \"to whom\". In a sense, **this technique simulate CNN kernel with multiple filters that can filter out different information with each of its filter**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/selfattention_3.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Note: mapping Q,K,V to multiple **lower dimensional spaces** using **fully-connected linear layer**\n",
     "- for head 1 (i=1), use weight matrix WiQ for Q, W1K for K and W1V for V"
@@ -309,7 +334,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "$$\n",
     "W^Q_i \\in\n",
@@ -325,7 +352,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "$$\n",
     "d_k=d_v=d_{\\text{model}}/h=64\n",
@@ -334,7 +363,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- Instead of doing this for the entire columns of Q,K,V\n",
     "$$\n",
@@ -347,14 +378,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Why we need to do a linear tfm for Q,K,V (e.g. Q@Wi) before doing attention?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/selfattention_2.png)\n",
     "\n",
@@ -363,7 +398,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Linear tfm used here can be thought as to generate features: you project these vectors into a space using learnable parameters, so that when dot product is applied, IT CAN BE A GOOD PROXY FOR SIMILARITY"
    ]
@@ -371,7 +408,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def attention(query, key, value, mask=None, dropout=None):\n",
@@ -398,7 +437,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class MultiHeadedAttention(nn.Module):\n",
@@ -668,7 +709,35 @@
    "source": [
     "- in order for the model to make use of the order of the sequence, we must inject some information about the relative or absolute position of the tokens in the sequence\n",
     "- The positional encodings have the same dimension d_model as the embeddings, so that the two can be summed\n",
-    "- See more at http://nlp.seas.harvard.edu/2018/04/03/attention.html"
+    "- See more at http://nlp.seas.harvard.edu/2018/04/03/attention.html and https://pbcquoc.github.io/transformer/?fbclid=IwAR0UCWWbGgnbaETzfih-iEhsL2KHSszsSTb67mcyBxOzgMpmkSnErOljDYQ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/selfattention_4.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/selfattention_5.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a matrix to show distances between word emb vectors after adding the sinusoid function (for first row aka word #0, color is lighter aka distance is bigger when going right)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/selfattention_6.png)"
    ]
   },
   {
@@ -722,14 +791,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Transformer's Decoder"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/transformer_11.png)"
    ]
@@ -737,7 +810,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -747,7 +822,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def subsequent_mask(size):\n",
@@ -761,7 +838,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -782,7 +861,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -807,7 +888,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class DecoderLayer(nn.Module):\n",
@@ -831,14 +914,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "**One problem with using this Decoder for seq2seq task such as neural machine translation** is it will just be similar to LSTM/RNN (autoregressive model as you use observations from previous time steps as input to predict the value at the next time step)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Full model"
    ]
@@ -846,7 +933,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# a stack of N=6 identical layers\n",
@@ -880,7 +969,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class EncoderDecoder(nn.Module):\n",
@@ -911,7 +1002,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "class Generator(nn.Module):\n",
@@ -927,7 +1020,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def make_model(src_vocab, tgt_vocab, N=6, \n",
